2005-10-17 16:20 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNewGeometryEdgeSiteAllowedAt) test underlying
	geometry evaluation and projection to see if this is an acceptable
	site for insertion of a node constrained to a geometery edge.

2005-10-17 09:31 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindFaceWithNodesUnless) added to find the two faces
	that share an edge.

2005-10-07 15:02 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) added a -s option that scales estimated
	isotropic metric and ignores leand edge background.

2005-10-06 16:25 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) refactored to use gridWholesaleEvaluation
	and gridUntangle. gridSetMinInsertCost -0.5 to hit neg vol cell tol.
	gridSetMinSurfaceSmoothCost t0 -1.5 to allow for negative
	vol on smooth, but not negative faces.

2005-10-06 16:20 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSequentialEvaluation) calls gridUntangle for
	well you know... untangling.
	* src/gridcad.c (gridWholesaleEvaluation) evaluate all note to
	true location on geometry before calling gridUntangle.
	* src/gridcad.c (gridUntangle) to untangle all faces in UV and
	then untangle all tets in volume.

2005-10-06 16:03 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCostValid) reordered constraint tests so that
	the largest negative value is returned in the case that multiple
	constraints are violated. This result is returned by gridAR.

2005-10-06 13:31 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSequentialUntangle) extracted from
	gridSequentialEvaluation

2005-10-06 10:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSequentialEvaluation) fixed big bug, ment to call
	gridSmoothNodeVolumeSimplex, not gridSmoothNodeVolumeUVSimplex.
	Also echo face area uv, which should be constant.

2005-10-05 15:35 Mike Park  <mike.park@nasa.gov>

	* src/px_main.c (gridDumpBentEdgesForPX) added to dump list of bent