@@ -1,3 +1,8 @@
+2005-10-17 20:11 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridedger.c (gridedgerCreate) added a new module modeled
+	after gridmove and layer to discretize edges exactly.
+
 2005-10-17 16:20 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridNewGeometryEdgeSiteAllowedAt) test underlying
